# timbremaker

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
include/: clipp.h  int2chars.h  sin.h  wave.h
src/: CMakeLists.txt  int2chars.cpp  sin.cpp  wave.cpp
